--- a/index.html
+++ b/index.html
@@ -9,28 +9,18 @@
 <body>
 
     <div class="library-container">
-        <h1>Select a Book to Read</h1>
+        <h1>Select a Book</h1>
         <div class="bookshelf">
-            <a href="viewer.html?file=books/book1.pdf" class="book-card">
+            <a href="viewer.html?book=books/book1.html" class="book-card">
                 <div class="cover">1</div>
-                <h3>Book Title 1</h3>
+                <h3>Book 1</h3>
             </a>
             
-            <a href="viewer.html?file=books/book2.pdf" class="book-card">
+            <a href="viewer.html?book=books/book2.html" class="book-card">
                 <div class="cover">2</div>
-                <h3>Book Title 2</h3>
+                <h3>Book 2</h3>
             </a>
-
-            <a href="viewer.html?file=books/book3.pdf" class="book-card">
-                <div class="cover">3</div>
-                <h3>Book Title 3</h3>
-            </a>
-
-            <a href="viewer.html?file=books/book4.pdf" class="book-card">
-                <div class="cover">4</div>
-                <h3>Book Title 4</h3>
-            </a>
-        </div>
+            </div>
     </div>
 
 </body>
