--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="library-container">
         <h1>Select a Book to Read</h1>
         <div class="bookshelf">
-            <a href="viewer.html?file=books/book1.pdf" class="book-card">
-                <div class="cover">1</div>
-                <h3>Book Title 1</h3>
-            </a>
             
+            <a href="viewer.html?file=books/book1.pdf" class="book-card">
+    <div class="cover">1</div>
+    <h3>Book 1</h3>
+</a>
             <a href="viewer.html?file=books/book2.pdf" class="book-card">
                 <div class="cover">2</div>
                 <h3>Book Title 2</h3>
